gcc-14.2.0/gcc/testsuite/gdc.test/compilable/test23529.d
version https://git-lfs.github.com/spec/v1
oid sha256:f893a0c48142d4b8665fba72e1f11bee864c06594d03576bf44ccaa719b3be39
size 141
